--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-codebuild": "^1.32.2",
+    "@aws-cdk/aws-codepipeline": "^1.32.2",
     "@aws-cdk/core": "1.32.2",
     "source-map-support": "^0.5.16"
   }
