--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint:prettier": "npx prettier --check \"./{lib,bin}/**/*.ts\""
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.32.2",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
     "aws-cdk": "1.32.2",
+    "jest": "^24.9.0",
+    "prettier": "2.0.4",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
